--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     },
     "devDependencies": {
         "axios": "^0.21",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "sass": "^1.54.4",
+        "sass-loader": "^13.0.2",
+        "webpack": "^5.74.0"
     }
 }
